--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -13,6 +13,15 @@ services:
       mode: replicated
       replicas: 1
 
+  logger-service:
+    build:
+      context: ./../logger-service
+      dockerfile: ./../logger-service/logger-service.dockerfile
+    restart: always
+    deploy:
+      mode: replicated
+      replicas: 1
+
   authentication-service:
     build:
       context: ./../authentication-service
@@ -40,3 +49,14 @@ services:
       POSTGRES_DB: users
     volumes:
       - ./db-data/postgres/:/var/lib/postgresql/data/
+
+  mongo:
+    image: 'mongo:4.2.16-bionic'
+    ports:
+      - "27017:27017"
+    environment:
+      MONOGO_INITDB_DATABASE: logs
+      MONOGO_INITDB_USERNAME: admin
+      MONOGO_INITDB_PASSWORD: super369
+    volumes:
+      - ./db-data/mongo/:/data/db
