--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -35,6 +35,24 @@ services:
     environment:
       DSN: "host=postgres port=5432 user=postgres password=super369 dbname=users sslmode=disable timezone=UTC connect_timeout=5"
 
+  mailer-service:
+    build:
+      context: ./../mail-service
+      dockerfile: ./../mail-service/mail-service.dockerfile
+    restart: always
+    deploy:
+      mode: replicated
+      replicas: 1
+    environment:
+      MAIL_DOMAIN: localhost
+      MAIL_HOST: mailhog
+      MAIL_PORT: 1025
+      MAIL_ENCRYPTION: none
+      MAIL_USERNAME: ""
+      MAIL_PASSWORD: ""
+      FROM_NAME: "John Smith"
+      FROM_ADDRESS: john.smith@example.com
+
   postgres:
     image: 'postgres:17.4'
     ports:
@@ -60,3 +78,9 @@ services:
       MONOGO_INITDB_PASSWORD: super369
     volumes:
       - ./db-data/mongo/:/data/db
+
+  mailhog:
+    image: 'mailhog/mailhog:latest'
+    ports:
+      - "1025:1025"
+      - "8025:8025"
